--- a/todolist.html
+++ b/todolist.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>ali</h1>
-</body>
+    <link rel="stylesheet" href="todolist.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="title">ToDo List</h1>
+
+      <div>
+        <input type="text" class="InputTextCont" id="InputText" />
+        <i class="far fa-moon" id="toggleMode"></i>
+      </div>
+      <div class="inp-container">
+        <input type="submit" class="addBtn" id="addToDo" value="Ekle" />
+        <input type="submit" class="clearBtn" id="clearToDo" value="Sil" />
+      </div>
+
+      <div class="to-dos" id="toDoContainer"></div>
+    </div>
+    <script src="todolist.js"></script>
+  </body>
 </html>
