--- a/todolist.html
+++ b/todolist.html
@@ -11,20 +11,18 @@
     />
   </head>
   <body>
-    <div class="container">
-      <h1 class="title">ToDo List</h1>
-
-      <div>
-        <input type="text" class="InputTextCont" id="InputText" />
-        <i class="far fa-moon" id="toggleMode"></i>
-      </div>
-      <div class="inp-container">
-        <input type="submit" class="addBtn" id="addToDo" value="Ekle" />
-        <input type="submit" class="clearBtn" id="clearToDo" value="Sil" />
-      </div>
-
-      <div class="to-dos" id="toDoContainer"></div>
-    </div>
+<div class="container">
+<h1 class="title">ToDo List</h1>
+<div>
+    <input type="text" class="InputTextCont" id="InputText" />
+    <i class="far fa-moon" id="toggleMode"></i>
+</div>
+<div class="inp-container">
+    <input type="submit" class="addBtn" id="addToDo" value="Ekle">
+    <input type="submit" class="clearBtn" id="clearToDo" value="Sil">
+</div>
+<div class="to-dos" id="toDoContainer"></div>
+</div>
     <script src="todolist.js"></script>
   </body>
 </html>
