--- a/todolist.html
+++ b/todolist.html
@@ -21,6 +21,8 @@
     <input type="submit" class="addBtn" id="addToDo" value="Ekle">
     <input type="submit" class="clearBtn" id="clearToDo" value="Sil">
 </div>
+<div class="task-counter">Toplam Görev Sayısı: <span id="taskCount">0</span></div>
+
 <div class="to-dos" id="toDoContainer"></div>
 </div>
     <script src="todolist.js"></script>
