--- a/todolist.html
+++ b/todolist.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="todolist.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-  </head>
-  <body>
-<div class="container">
-<h1 class="title">ToDo List</h1>
-<div>
-    <input type="text" class="InputTextCont" id="InputText" />
-    <i class="far fa-moon" id="toggleMode"></i>
-</div>
-<div class="inp-container">
-    <input type="submit" class="addBtn" id="addToDo" value="Ekle">
-    <input type="submit" class="clearBtn" id="clearToDo" value="Sil">
-</div>
-<div class="task-counter">Toplam Görev Sayısı: <span id="taskCount">0</span></div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Task List</title>
+  <link rel="stylesheet" href="todolist.css">
+</head>
+<body>
+  <div class="todo-container" id="app">
+    <h1 class="title">ToDo List</h1>
+    
+    <input class="textContent" type="text" id="newTask" placeholder="Yeni görev ekleyin...">
+    <button class="addBtn" onclick="addTask()">Ekle</button>
 
-<div class="to-dos" id="toDoContainer"></div>
-
-</div>
-    <script src="todolist.js"></script>
-  </body>
+    <ul id="taskList"></ul>
+  </div>
+  <script src="todolist.js"></script>
+</body>
 </html>
